--- a/portfolio.html
+++ b/portfolio.html
@@ -22,29 +22,49 @@
 </head>
 <body>
   <header class="navigation underline">
-      <div class="container">
+    <div class="container header__container">
+      <a class="logo-link logo" href="/index.html">Web<span class="logo logo-header">Studio</span></a>
+      <div class="header__menu">
+        <button type="button" 
+        class="menu-button js-open-menu" 
+        aria-expanded="false"
+        aria-controls="mobile-menu">
+        <svg width="40" height="40" 
+        aria-label="переключатель мобильного меню">
+          <use class="icon-cross js-close-menu" href="./images/icons.svg#icon-close" ></use>
+          <use class="icon-menu js-open-menu" href="./images/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
+
+      <div class="mobile-menu js-menu-container">
+        <!-- <button class="btn-close__menu js-close-menu"><svg width="40" height="40"><use class="icon-cross" href="./images/icons.svg#icon-close" .js-close-menu></use></svg></button> -->
         <nav class="main-nav">
-          <a class="logo-link logo" href="/index.html">Web<span class="logo logo-header">Studio</span></a>
-          <ul class="site-nav">
-            <li class="site-nav__unit first-unit"><a href="./index.html" class="link site-nav__link">Студія</a></li>
+        <ul class="site-nav">
+            <li class="site-nav__unit first-unit"><a href="./index.html" class="link site-nav__link link">Студія</a></li>
             <li class="site-nav__unit"><a href="./portfolio.html" class="site-nav__link link current-page">Портфоліо</a></li>
             <li class="site-nav__unit"><a href="#" class="site-nav__link link">Контакти</a></li>
           </ul>
-        </nav>
         <ul class="contact">
           <li class="contact__unit">
-            <a href="mailto:info@devstudio.com" class="link contact__mail"
-              ><svg class="icon-envelope"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a
-            >
-          </li >
-          <li class="contact__unit">
-            <a href="tel:+380961111111" class="link contact__tel"
-              ><svg class="icon-tel"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="link contact__tel">
+              <svg class="icon-tel"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
+          <li class="contact__unit">
+            <a href="mailto:info@devstudio.com" class="link contact__mail"
+              ><svg class="icon-envelope"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a                >
+          </li >
         </ul>
-      </div>
-    </header>
+        <ul class="nav-soc">
+          <li class="nav-soc__item"><a class="nav-soc__link" href="#">Instagram</a></li>
+          <li class="nav-soc__item"><a class="nav-soc__link" href="#">Twitter</a></li>
+          <li class="nav-soc__item"><a class="nav-soc__link" href="#">Facebook</a></li>
+          <li class="nav-soc__item"><a class="nav-soc__link" href="#">LinkedIn</a></li>
+        </ul>
+      </nav>  
+        </div>   
+  </div>
+</div>
+</header> 
     <main>
         <section class="portfolio section">
             <div class="container">
@@ -137,7 +157,7 @@
                 <div class="projects-box">
                 <h3 class="title">Inspiration has no Borders</h3>
                 <p>Веб-сайт</p></div>
-                </div></a>>
+                </div></a>
             </li>
             <li class="item">
                 <a class="project-site" href="#">
