--- a/portfolio.html
+++ b/portfolio.html
@@ -298,6 +298,39 @@
       </div>
     </div>
     </footer> 
+
+    <div class="mobile-menu js-menu-container">
+      <button class="menu-toggle js-close-menu">
+        <svg width="40" height="40">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div class="mobile-menu__wrap">
+        <ul class="mobile-nav">
+          <li class="mobile-nav__unit"><a href="./index.html" class="link mobile-nav__link ">Студія</a></li>
+          <li class="mobile-nav__unit"><a href="./portfolio.html" class="mobile-nav__link link active-page">Портфоліо</a></li>
+          <li class="mobile-nav__unit"><a href="#" class="mobile-nav__link link">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="mob-contact">
+        <li class="mobile-contact">
+          <a href="mailto:info@devstudio.com" class="link mobile-contact__link"
+            >info@devstudio.com</a
+          >
+        </li >
+        <li class="mobile-contact">
+          <a href="tel:+380961111111" class="link mobile-contact__link">+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-soc">
+        <li class="mobile-soc__item"><a class="mobile-soc__link" href="#">Instagram</a></li>
+        <li class="mobile-soc__item"><a class="mobile-soc__link" href="#">Twitter</a></li>
+        <li class="mobile-soc__item"><a class="mobile-soc__link" href="#">Facebook</a></li>
+        <li class="mobile-soc__item"><a class="mobile-soc__link" href="#">LinkedIn</a></li>
+      </ul> 
+    </div> 
+
     <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
