--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
       </button>
       <div class="mobile-menu__wrap">
         <ul class="mobile-nav">
-          <li class="mobile-nav__unit"><a href="./index.html" class="link mobile-nav__link current-page">Студія</a></li>
+          <li class="mobile-nav__unit"><a href="./index.html" class="link mobile-nav__link active-page">Студія</a></li>
           <li class="mobile-nav__unit"><a href="./portfolio.html" class="mobile-nav__link link">Портфоліо</a></li>
           <li class="mobile-nav__unit"><a href="#" class="mobile-nav__link link">Контакти</a></li>
         </ul>
