--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
             </nav>
             <ul class="contact">
               <li class="contact__unit">
-                <a href="mailto:info@devstudio.com" class="link contact__link"
+                <a href="mailto:info@devstudio.com" class="contact__link"
                   ><svg class="icon-envelope"><use href="./images/icons.svg#icon-envelope"></use></svg>info@devstudio.com</a
                 >
               </li >
               <li class="contact__unit">
-                <a href="tel:+380961111111" class="link contact__link"
+                <a href="tel:+380961111111" class="contact__link"
                   ><svg class="icon-tel"><use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a   >
               </li>
             </ul>
