--- a/index.html
+++ b/index.html
@@ -354,18 +354,18 @@
       <div class="mobile-menu__wrap">
         <ul class="mobile-nav">
           <li class="mobile-nav__unit"><a href="./index.html" class="link mobile-nav__link active-page">Студія</a></li>
-          <li class="mobile-nav__unit"><a href="./portfolio.html" class="mobile-nav__link link">Портфоліо</a></li>
+          <li class="mobile-nav__unit"><a href="./portfolio.html" class="mobile-nav__link ">Портфоліо</a></li>
           <li class="mobile-nav__unit"><a href="#" class="mobile-nav__link link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="mob-contact">
         <li class="mobile-contact">
-          <a href="mailto:info@devstudio.com" class="link mobile-contact__link"
+          <a href="mailto:info@devstudio.com" class="mobile-contact__link"
             >info@devstudio.com</a
           >
         </li >
         <li class="mobile-contact">
-          <a href="tel:+380961111111" class="link mobile-contact__link">+38 096 111 11 11</a
+          <a href="tel:+380961111111" class="mobile-contact__link">+38 096 111 11 11</a
           >
         </li>
       </ul>
