--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
               <source srcset="./images/staff/igor_desktop_1x.jpg 1x, ./images/staff/igor_desktop_2x.jpg 2x" media="(min-width:1200px)">
               <source srcset="./images/staff/igor_tablet_1x.jpg 1x, ./images/staff/igor_tablet_2x.jpg 2x" media="(min-width:768px)">
               <source srcset="./images/staff/igor_mob_1x.jpg 1x, ./images/staff/igor_mob_2x.jpg 2x" media="(min-width:480px)">
-              <img class="people__image"
-            srcset="./images/staff/igor_desktop_1x.jpg 1x, ./images/staff/igor_desktop_2x.jpg 2x,"
-            src="./images/staff/igor_desktop_1x.jpg" width="270" alt="Ігор Дем'яненко" />
+              <img class="people__image"  src="./images/staff/igor_desktop_1x.jpg" width="270" alt="Ігор Дем'яненко" />
             </picture>
             <h3 class="people__name">Ігор Дем'яненко</h3>
             <p class="people__profession">Product Designer</p>
@@ -196,13 +194,13 @@
             </ul>
           </li>
           <li class="people__items">
-            <img class="people__image"
-            srcset="./images/staff/nick_desktop_1x.jpg 1x, ./images/staff/nick_desktop_2x.jpg 2x,"
-            src="./images/staff/nick_desktop_1x.jpg" width="270" alt="Микола Тарасов" />
             <picture>
               <source srcset="./images/staff/nick_mob_1x.jpg 1x, ./images/staff/nick_mob_2x.jpg 2x" media="(min-width:480px)">
               <source srcset="./images/staff/nick_tablet_1x.jpg 1x, ./images/staff/nick_tablet_2x.jpg 2x" media="(min-width:768px)">
               <source srcset="./images/staff/nick_desktop_1x.jpg 1x, ./images/staff/nick_desktop_2x.jpg 2x" media="(min-width:1200px)">
+              <img class="people__image"
+            srcset="./images/staff/nick_desktop_1x.jpg 1x, ./images/staff/nick_desktop_2x.jpg 2x,"
+            src="./images/staff/nick_desktop_1x.jpg" width="270" alt="Микола Тарасов" />
             </picture>
             <h3 class="people__name">Микола Тарасов</h3>
             <p class="people__profession">Marketing</p>
@@ -214,13 +212,13 @@
             </ul>
           </li>
           <li class="people__items">
-            <img class="people__image"
-            srcset="./images/staff/mikhail_desktop_1x.jpg 1x, ./images/staff/mikhail_desktop_2x.jpg 2x,"
-            src="./images/staff/mikhail_desktop_1x.jpg" width="270" alt="Михайло Єрмаков" />
             <picture>
               <source srcset="./images/staff/mikhail_desktop_1x.jpg 1x, ./images/staff/mikhail_desktop_2x.jpg 2x" media="(min-width:1200px)">
               <source srcset="./images/staff/mikhail_tablet_1x.jpg 1x, ./images/staff/mikhail_tablet_2x.jpg 2x" media="(min-width:768px)">
               <source srcset="./images/staff/mikhail_mob_1x.jpg 1x, ./images/staff/mikhail_mob_2x.jpg 2x" media="(min-width:480px)">
+              <img class="people__image"
+            srcset="./images/staff/mikhail_desktop_1x.jpg 1x, ./images/staff/mikhail_desktop_2x.jpg 2x,"
+            src="./images/staff/mikhail_desktop_1x.jpg" width="270" alt="Михайло Єрмаков" />
             </picture>
             <h3 class="people__name">Михайло Єрмаков</h3>
             <p class="people__profession">UI Designer</p>
