--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </ul>
             <button type="button" 
             class="menu-button js-open-menu" 
-            aria-expanded="false"
-            aria-controls="mobile-menu">
+            aria-expanded="false">
+
             <svg width="40" height="40" 
             aria-label="переключатель мобильного меню">
               <use class="icon-menu js-open-menu" href="./images/icons.svg#icon-menu"></use>
@@ -181,7 +181,6 @@
               <source srcset="./images/staff/olga_tablet_1x.jpg 1x, ./images/staff/olga_tablet_2x.jpg 2x" media="(min-width:768px)">
               <source srcset="./images/staff/olga_desktop_1x.jpg 1x, ./images/staff/olga_desktop_2x.jpg 2x" media="(min-width:1200px)">
               <img class="people__image"
-            srcset="./images/staff/olga_desktop_1x.jpg 1x, ./images/staff/olga_desktop_2x.jpg 2x,"
             src="./images/staff/olga_desktop_1x.jpg" width="270" alt="Ольга Рєпіна" />
             </picture>
             <h3 class="people__name">Ольга Рєпіна</h3>
@@ -199,7 +198,6 @@
               <source srcset="./images/staff/nick_tablet_1x.jpg 1x, ./images/staff/nick_tablet_2x.jpg 2x" media="(min-width:768px)">
               <source srcset="./images/staff/nick_desktop_1x.jpg 1x, ./images/staff/nick_desktop_2x.jpg 2x" media="(min-width:1200px)">
               <img class="people__image"
-            srcset="./images/staff/nick_desktop_1x.jpg 1x, ./images/staff/nick_desktop_2x.jpg 2x,"
             src="./images/staff/nick_desktop_1x.jpg" width="270" alt="Микола Тарасов" />
             </picture>
             <h3 class="people__name">Микола Тарасов</h3>
@@ -217,7 +215,6 @@
               <source srcset="./images/staff/mikhail_tablet_1x.jpg 1x, ./images/staff/mikhail_tablet_2x.jpg 2x" media="(min-width:768px)">
               <source srcset="./images/staff/mikhail_mob_1x.jpg 1x, ./images/staff/mikhail_mob_2x.jpg 2x" media="(min-width:480px)">
               <img class="people__image"
-            srcset="./images/staff/mikhail_desktop_1x.jpg 1x, ./images/staff/mikhail_desktop_2x.jpg 2x,"
             src="./images/staff/mikhail_desktop_1x.jpg" width="270" alt="Михайло Єрмаков" />
             </picture>
             <h3 class="people__name">Михайло Єрмаков</h3>
@@ -279,7 +276,7 @@
       <div class="third-colum">
         <p  class="join">Підпишіться на розсилку</p>
         <form  class="join-mail" action="URL">
-          <label>
+          <label class="join-label">
             <input type="email" name="email" class="your-mail" placeholder="E-mail"/>
           </label>
         <button type="submit" class="btn button-footer">Підписатися <svg class="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-send"></use></svg> </button>
@@ -354,7 +351,6 @@
           <li class="mobile-nav__unit"><a href="./portfolio.html" class="mobile-nav__link ">Портфоліо</a></li>
           <li class="mobile-nav__unit"><a href="#" class="mobile-nav__link link">Контакти</a></li>
         </ul>
-      </nav>
       <ul class="mob-contact">
         <li class="mobile-contact">
           <a href="mailto:info@devstudio.com" class="mobile-contact__link"
@@ -373,7 +369,7 @@
         <li class="mobile-soc__item"><a class="mobile-soc__link" href="#">LinkedIn</a></li>
       </ul> 
     </div> 
-
+  </div> 
         <script src="./js/modal.js"></script>
         <script src="./js/mobile-menu.js"></script>
   </body>
